# Mailing-List-management-Service

./: .env.sample  .gitignore  README.md  blog.json  groups.json  manage.py  messages.json  pyproject.toml  users.json
blog/: urls.py
blog/templates/blog/: blog_detail.html
blog1/: admin.py  models.py  urls.py  views.py
blog1/migrations/: 0001_initial.py
blog1/templates/blog/: blog_detail.html
djangoProject666/: asgi.py  settings.py  urls.py  wsgi.py
message/: admin.py  apps.py  models.py  services.py  urls.py  views.py
message/templates/message/: home_page.html  mailinglist_confirm_delete.html  mailinglist_detail.html  mailinglist_form.html  mailinglist_list.html
messages1/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
messages1/migrations/: 0001_initial.py  0002_client_owner_mailinglist_owner_message_owner.py
messages1/templates/message/: client_detail.html  client_form.html  client_list.html  home_page.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html
messages1/templates/message/includes/: navbar.html
users/: urls.py  views.py
users/management/commands/: csu.py
users/templates/users/: login.html  register.html  user_detail.html  user_form.html  user_list.html
users1/: admin.py  forms.py  models.py  urls.py  views.py
users1/management/commands/: csu.py  cusers.py
users1/migrations/: 0001_initial.py  0002_alter_user_avatar.py
users1/templates/users/: login.html  register.html  user_detail.html  user_form.html  user_list.html
